--- a/sass/block/_hero.scss
+++ b/sass/block/_hero.scss
@@ -30,28 +30,43 @@
     font-weight: 400;
     max-width: 333px;
     color: #7E7D7A;
+} 
+.sh{
+    color: white;
 }
 .hero__menu{
     display: flex;
     gap: 20px;
 }
 .order{
-    padding: 12px 32px;
-    background: #2F2105    ;
-    border: none;
-    display: flex;
-    gap: 10px;
-    border-radius: 33px;
-    font-size: 16px;
-    color: #fff;
+    padding: 10px 20px;
+        border: none;
+        border-radius: 20px;
+        font-size: 18px;
+        font-weight: 600;
+        background-color: 
+        #2F2105;
+        color: white;
+        transition: 2s;
+        &:hover{
+            transform: scale(1.1);
+          
+        }
 }
 .more{
-    padding: 11px 30px;
+    padding: 10px 20px;
+    border-radius: 20px;
     border: none;
-    background: transparent;
-    font-size: 16px;
-    color: #eca413;
-    cursor: pointer;
+    background-color: 
+    #F6EBDA;
+    font-size: 18px;
+    font-weight: 600;
+    color: orange;
+    transition: 2s;
+    &:hover{
+        transform: scale(1.1);
+      border: 2px solid orange;
+    }
 }
 @media (max-width:900px) {
     .hero__wrapper{
