--- a/sass/block/_menu.scss
+++ b/sass/block/_menu.scss
@@ -120,7 +120,7 @@ h3 {
     border-radius: 20px;
     align-items: center;
     justify-content: center;
-    background: rgb(50, 50, 184);
+    background: blue;
     padding: 10px;
     margin-bottom: 20px;
     margin: auto;
