--- a/sass/block/_data.scss
+++ b/sass/block/_data.scss
@@ -4,9 +4,14 @@
 }
 .content{
     display: flex;
+    flex-wrap: wrap;
     margin-top: 50px;
     align-items: center;
     justify-content: center;
+}
+
+.img{
+    width: 50px;
 }
 .theme{
     width: 50%;
@@ -31,4 +36,20 @@
 .rect{
     font-size: 16px;
     font-weight: 400;
+}
+
+
+@media (max-width:1095px) {
+    .theme{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+.code{
+    width: 200px;;
+}
+.littel{
+    width: 120px;
+}
 }
