--- a/sass/block/_popular.scss
+++ b/sass/block/_popular.scss
@@ -88,7 +88,7 @@
     .popular__wrapper{
         display: flex;
         flex-wrap: wrap;
-        padding: 0 30px;
+        padding: 0 ;
     }
     .activ{
         position: absolute;
